fix: overflow horizontal en mobile, main width:100%

--- a/mi-blog-laravel/src/styles/global.css
+++ b/mi-blog-laravel/src/styles/global.css
@@ -68,6 +68,7 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	word-wrap: break-word;
 	overflow-wrap: break-word;
+	overflow-x: hidden;
 }
 
 ::selection {
